adds a property 'bookIndex' for association in the myLibrary array

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="libContainer">
     <ul class="myShelf">
-      <li>book one</li>
+      <li>book one <button class="remove">Remove</button></li>
     </ul>
   </div>
   
