add removal feature with both display and array updated git push

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <div class="libContainer">
     <ul class="myShelf">
-      <li>book one <button class="remove">Remove</button></li>
+      <!-- added a data identifier for testing purposes below -->
+      <!-- <li>book one <button class="remove" data-identifier = '1'>Remove</button></li> -->
     </ul>
   </div>
   
