add read status button and text fields to include author, page count and read status

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       <p>Insert form fields here</p>
       <div>
         <span>Book Name: </span><input type="text" id="name">
-
-
+        <span>Author: </span><input type="text" id="author">
+        <span>How many pages: </span><input type="text" id="pageCount">
+        <span>Read or not: </span><input type="text" id="readOrNot">
       </div>
       
       <div class="controls">
