--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span>Book Name: </span><input type="text" id="name">
         <span>Author: </span><input type="text" id="author">
         <span>How many pages: </span><input type="text" id="pageCount">
-        <span>Read or not: </span><input type="text" id="readOrNot">
+        <span>Read or not: </span><input type="text" id="readOrNot" placeholder="Y/N">
       </div>
       
       <div class="controls">
