change span to div in index popup modal

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <h2>Add New Book to the List</h2>
       <p>Insert form fields here</p>
       <div>
-        <span>Book Name: </span><input type="text" id="name">
-        <span>Author: </span><input type="text" id="author">
-        <span>How many pages: </span><input type="text" id="pageCount">
-        <span>Read or not: </span><input type="text" id="readOrNot" placeholder="Y/N">
+        <div>Book Name: </div><input type="text" id="name">
+        <div>Author: </div><input type="text" id="author">
+        <div>How many pages: </div><input type="text" id="pageCount">
+        <div>Read or not: </div><input type="text" id="readOrNot" placeholder="Y/N">
       </div>
       
       <div class="controls">
