--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="popup-content">
       <h2>Add New Book to the List</h2>
       <p>Insert form fields here</p>
-      <div>
+      <div class="flex-box">
         <div>Book Name: </div><input type="text" id="name">
         <div>Author: </div><input type="text" id="author">
         <div>How many pages: </div><input type="text" id="pageCount">
