added header style and moved new book button to top right

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <title>small library app</title>
 </head>
 <body>
+  <div class="header"> <span class="title">My Library</span>
+    <span class="center">
+    <button id="open-popup">NEW BOOK</button>
+  </span>
+</div>
   <div class="libContainer">
     <ul class="myShelf">
-      <!-- added a data identifier for testing purposes below -->
-      <!-- <li>book one <button class="remove" data-identifier = '1'>Remove</button></li> -->
     </ul>
   </div>
   
 
-  <div class="center">
-    <button id="open-popup">NEW BOOK</button>
-</div>
+  
 
 <div class="popup" id="popup">
   <div class="overlay"></div>
