update new book button style

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="header"> <span class="title">My Library</span>
-    <span class="center">
-    <button id="open-popup">NEW BOOK</button>
-  </span>
+    <div class="center">
+    <button id="open-popup">New Book</button>
+    </div>
 </div>
   <div class="libContainer">
     <ul class="myShelf">
